--- a/Cirno5/Web/index.html
+++ b/Cirno5/Web/index.html
@@ -3,13 +3,40 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Hello React!</title>
-</head>
+  <title>plusplus7' blog</title>
+  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
-<body>
-  <div id="example"></div>
-  <!-- Main -->
-  <script src="/dist/bundle.js"></script>
-</body>
+  <style>
+    body,
+    button,
+    input,
+    select,
+    textarea,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: Microsoft YaHei,
+      '宋体',
+      Tahoma,
+      Helvetica,
+      Arial,
+      "\5b8b\4f53",
+      sans-serif;
+    }
+  </style>
+  </head>
 
-</html>
+  <body>
+    <div id="example"></div>
+    <!-- Main -->
+    <script src="/dist/bundle.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"></script>
+
+  </body>
+
+  </html>
