--- a/Cirno5/web/public/index.html
+++ b/Cirno5/web/public/index.html
@@ -8,5 +8,6 @@
     <div id='root'>
     </div>
     <script type="text/javascript" src="/bundle.js" ></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </body>
 </html>
